# rdev

./: Cargo.toml  Justfile  TODO.md
doc/: rdev.1.scdoc  rdev.adoc
doc/mdbooklet/: .gitignore  book.toml
doc/mdbooklet/src/: about.md  installation.md
src/: cli.rs  main.rs
